--- a/app/assets/stylesheets/partials/_contact.scss
+++ b/app/assets/stylesheets/partials/_contact.scss
@@ -18,6 +18,7 @@
 
   ::-webkit-input-placeholder {
     color: $cream;
+    opacity: 1;
     font-family: ubuntu;
     font-weight: lighter;
     font-size: 14px;
@@ -26,6 +27,7 @@
 
   :-moz-placeholder { /* Firefox 18- */
     color: $cream;
+    opacity: 1;
     font-family: ubuntu;
     font-size: 14px;
     font-weight: lighter;
@@ -34,6 +36,7 @@
 
   ::-moz-placeholder {  /* Firefox 19 */
     color: $cream;
+    opacity: 1;
     font-family: ubuntu;
     font-weight: lighter;
     font-size: 14px;
@@ -42,6 +45,7 @@
 
   :-ms-input-placeholder { 
     color: $cream;
+    opacity: 1;
     font-family: ubuntu;
     font-weight: lighter;
     font-size: 14px;
