--- a/app/assets/stylesheets/partials/_login.scss
+++ b/app/assets/stylesheets/partials/_login.scss
@@ -27,6 +27,7 @@
 
   ::-webkit-input-placeholder {
     color: $cream;
+    opacity: 1;
     font-family: ubuntu;
     font-weight: lighter;
     font-size: 14px;
@@ -35,6 +36,7 @@
 
   :-moz-placeholder { /* Firefox 18- */
     color: $cream;
+    opacity: 1;
     font-family: ubuntu;
     font-size: 14px;
     font-weight: lighter;
@@ -43,6 +45,7 @@
 
   ::-moz-placeholder {  /* Firefox 19 */
     color: $cream;
+    opacity: 1;
     font-family: ubuntu;
     font-weight: lighter;
     font-size: 14px;
@@ -51,6 +54,7 @@
 
   :-ms-input-placeholder { 
     color: $cream;
+    opacity: 1;
     font-family: ubuntu;
     font-weight: lighter;
     font-size: 14px;
